deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zomega
  namespace: zomega
spec:
  selector: {app: zomega-api}
  ports: [{name: http, port: 80, targetPort: http}]
